// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBreadcrumbs.js should have breadcrumbs classes 1`] = `

<ul class="v-breadcrumbs theme--light">
</ul>

`;

exports[`VBreadcrumbs.js should inject slot to children 1`] = `

<ul class="v-breadcrumbs theme--light">
  <li>
    <a class="v-breadcrumbs__item">
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="v-breadcrumbs__item">
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="v-breadcrumbs__item">
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="v-breadcrumbs__item">
    </a>
  </li>
</ul>

`;

exports[`VBreadcrumbs.js should not create dividers for non-items 1`] = `

<ul class="v-breadcrumbs theme--light">
  <span>
  </span>
  <li>
    <a class="v-breadcrumbs__item">
    </a>
  </li>
  <span>
  </span>
  <li class="v-breadcrumbs__divider">
    /
  </li>
  <li>
    <a class="v-breadcrumbs__item">
    </a>
  </li>
</ul>

`;

exports[`VBreadcrumbs.js should use a custom divider slot 1`] = `

<ul class="v-breadcrumbs theme--light">
  <li>
    <a class="v-breadcrumbs__item">
    </a>
  </li>
  <li class="v-breadcrumbs__divider">
    /divider/
  </li>
  <li>
    <a class="v-breadcrumbs__item">
    </a>
  </li>
</ul>

`;

exports[`VBreadcrumbs.js should use custom justify props 1`] = `

<ul class="v-breadcrumbs theme--light">
</ul>

`;

exports[`VBreadcrumbs.js should use custom justify props 2`] = `

<ul class="v-breadcrumbs theme--light">
</ul>

`;
